# BRDFLab

BRDFLabv0.8.2/: README.txt
BRDFLabv0.8.2/Data/analyticModels/: AshikhminShirley.xml  CookTorrance.xml  Kurt.xml  Kurt2Specs.xml  Lambertian.xml  Ward.xml  WardGM.xml  WardNeumann.xml
BRDFLabv0.8.2/Data/brdfs/: Cornell-Skin-mahesh-Indian.xml  Cornell-Skin-steve-Caucasian.xml  Cornell-bluish.xml  Cornell-krylon-gray-primer.xml  Cornell-template.xml  MERL-green-plastic.xml  MERL-orange-paint.xml  MERL-pink-plastic.xml  MERL-white-diffuse-bball.xml  MPI-brdf_OPEL_titan.xml  MPI-brdf_blue.xml  MPI-brdf_blue_matte.xml  MPI-brdf_white.xml  Ngan-template.xml  Sample-Ashikhmin.xml  Sample-CookTorrance.xml  Sample-Lafortune.xml  fitting_done.xml  fitting_example.xml  mat1.xml  prova.xml
BRDFLabv0.8.2/Data/brdfs/exported/.svn/: all-wcprops  entries
BRDFLabv0.8.2/Data/models/: skySphere.mesh
BRDFLabv0.8.2/Data/models/cubes/: cube512.mesh  cube6faces.material  cube6faces.mesh
BRDFLabv0.8.2/Data/shaders/: AnalyticBRDF_FS.glsl  AnalyticBRDF_VS.glsl  BRDF.material  Copia de coordinateTransformations.glsl  Display2DTextureBRDF_VS.glsl  Display3DTextureBRDF_VS.glsl  DisplayComputeNormalGS.glsl  EnvMapBRDF_VS.glsl  EnvMapVS.glsl  EnvSphere.material  FirstTrianglesSimulationFS.glsl  GenerateGrooves.material  GenerateGroovesVS.glsl  GouraudVS.glsl  HeightFieldSimulation_PS.glsl  HeightFieldSimulation_VS.glsl  IterationTrianglesSimulationFS.glsl  PointLight.material  PointLight3DTextureBRDF_FS.glsl  PointLight3DTextureBRDF_VS.glsl  ReliefMappingViewer.material  SimpleShading.material  basics.material  coordinateTransformations.glsl  envSphere_FS.glsl  envSphere_VS.glsl  pointLight_FS.glsl  pointLight_VS.glsl  reliefMappingViewer_PS.glsl  reliefMappingViewer_VS.glsl  shadingFS.glsl  shadingVS.glsl  spheresIterationFS.glsl  spheresViewer_VS.glsl  trianglesViewer_PS.glsl  trianglesViewer_VS.glsl
BRDFLabv0.8.2/Data/shaders/default/: AnalyticBRDF_VS.glsl  EnvMapBRDF_FS.glsl
BRDFLabv0.8.2/Data/shaders/parts/: bodyEnvMap.glsl  footerComputeBRDF.glsl  footerDisplay.glsl  footerEnvMap.glsl  footerPointLight.glsl  headerComputeBRDF.glsl  headerDisplay.glsl  headerEnvMap.glsl  headerPointLight.glsl
BRDFLabv0.8.2/Data/textures/dualparaboloids/: Thumbs.db  beach-back.hdr  campus-back.hdr  campus-front.hdr  galileo-back.hdr  grace-front.hdr  kitchen-back.hdr  stpeters-front.hdr  uffizi-back.hdr  uffizi-front.hdr
BRDFLabv0.8.2/Data/textures/relief/: Thumbs.db
BRDFLabv0.8.2/release/: ogre.cfg  plugins.cfg  temp.xml
brdflab-code-r18-trunk/BRDFLab/: CMakeLists.txt  Compile instructions.txt  README.txt
brdflab-code-r18-trunk/BRDFLab/BRDFLab/: CMakeLists.txt
brdflab-code-r18-trunk/BRDFLab/BRDFLab/include/: AddLobe.h  AnalyticBRDF.h  BRDF.h  BRDFLab.h  BRDFViewer.h  CarPaintBRDFDatabase.h  CarPaintReading.h  Console.h  DoubleInteractionBRDF.h  FittedBRDF.h  Fitting.h  GPUSimulationBRDF.h  GroovesBRDF.h  LMFitting.h  LobeParameter.h  MERLBRDFDatabase.h  MERLReading.h  MERLStructureBRDF.h  MeasuredBRDF.h  Model_Inversion.h  NLoptFitting.h  ObjectRenderer.h  OgreGroovesWindow.h  OgreObjectRenderWindow.h  OgreSimulationWindow.h  OgreSurfaceViewer.h  ParametricLOBE.h  PropertyBRDFEditorWidget.h  PropertyEditorWidget.h  RawDataBRDF.h  ReliefBRDF.h  ScatmechBRDF.h  SimulatedBRDF.h  SpheresBRDF.h  SubsurfaceParticleBRDF.h  TrianglesBRDF.h  XML_Editor.h  ogrewidget.h
brdflab-code-r18-trunk/BRDFLab/BRDFLab/muParser/include/: muParserDef.h  muParserToken.h  muParserTokenReader.h
brdflab-code-r18-trunk/BRDFLab/BRDFLab/muParser/source/: muParserBase.cpp  muParserBytecode.cpp  muParserTokenReader.cpp
brdflab-code-r18-trunk/BRDFLab/BRDFLab/nlopt/: README-WINDOWS  libnlopt-0.def  libnlopt-0.exp  libnlopt-0.lib  nlopt-python.cpp  nlopt.f  nlopt.h  nlopt.hpp  nlopt.py  setup.py
brdflab-code-r18-trunk/BRDFLab/BRDFLab/source/: AddLobe.cpp  AnalyticBRDF.cpp  BRDF.cpp  BRDFLab.cpp  BRDFViewer.cpp  BlinnPhongLOBE.cpp  BlinnPhongParameters.cpp  CarPaintBRDFDatabase.cpp  Copia de PropertyEditorWidget.cpp  DoubleInteractionBRDF.cpp  FittedBRDF.cpp  Fitting.cpp  GPUSimulationBRDF.cpp  GUIParameters.cpp  GroovesBRDF.cpp  LMFitting.cpp  LobeParameter.cpp  MERLBRDFDatabase.cpp  MERLStructureBRDF.cpp  Main.cpp  MeasuredBRDF.cpp  NLoptFitting.cpp  ObjectRenderer.cpp  OgreGroovesWindow.cpp  OgreObjectRenderWindow.cpp  OgreSimulationWindow.cpp  OgreSurfaceViewer.cpp  ParametricLOBE.cpp  PropertyBRDFEditorWidget.cpp  PropertyEditorWidget.cpp  RawDataBRDF.cpp  ReliefBRDF.cpp  ScatmechBRDF.cpp  SimulatedBRDF.cpp  SpheresBRDF.cpp  SubsurfaceParticleBRDF.cpp  TrianglesBRDF.cpp  XML_Editor.cpp  ogrewidget.cpp
brdflab-code-r18-trunk/BRDFLab/BRDFLab/ui/: MainWindow.ui
